--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -459,18 +459,24 @@
 .lh-audit--fail .lh-audit__display-text {
   color: var(--color-fail-secondary);
 }
+
 .lh-audit--fail .lh-audit__score-icon,
-.lh-audit--error .lh-audit__score-icon, 
 .lh-scorescale-range--fail::before {
   border-left: calc(var(--score-icon-size) / 2) solid transparent;
   border-right: calc(var(--score-icon-size) / 2) solid transparent;
   border-bottom: var(--score-icon-size) solid var(--color-fail);
 }
 
+.lh-audit--error .lh-audit__score-icon{
+  height:28px;
+  background-image: url("data:image/svg+xml,%3Csvg width='18' height='28' viewBox='0 0 18 28' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.5 22H10.5V19H7.5V22Z' fill='%23FF4E42'/%3E%3Cpath d='M7.5 16H10.5V7H7.5V16Z' fill='%23FF4E42'/%3E%3C/svg%3E");
+}
+
 .lh-audit--manual .lh-audit__display-text,
 .lh-audit--notapplicable .lh-audit__display-text {
   color: var(--color-gray-600);
 }
+
 .lh-audit--manual .lh-audit__score-icon,
 .lh-audit--notapplicable .lh-audit__score-icon {
   border-radius: 100%;
@@ -717,11 +723,15 @@
 .lh-metric--fail .lh-metric__value {
   color: var(--color-fail-secondary);
 }
-.lh-metric--fail .lh-metric__innerwrap::before,
-.lh-metric--error .lh-metric__innerwrap::before {
+.lh-metric--fail .lh-metric__innerwrap::before {
   border-left: calc(var(--score-icon-size) / 2) solid transparent;
   border-right: calc(var(--score-icon-size) / 2) solid transparent;
   border-bottom: var(--score-icon-size) solid var(--color-fail);
+}
+
+.lh-metric--error .lh-metric__innerwrap::before{
+  height:28px;
+  background-image: url("data:image/svg+xml,%3Csvg width='18' height='28' viewBox='0 0 18 28' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.5 22H10.5V19H7.5V22Z' fill='%23FF4E42'/%3E%3Cpath d='M7.5 16H10.5V7H7.5V16Z' fill='%23FF4E42'/%3E%3C/svg%3E");
 }
 
 .lh-metric--error .lh-metric__value,
