--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -169,6 +169,10 @@
   --pwa-fast-reliable-color-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><g fill-rule="nonzero" fill="none"><circle fill="%230CCE6B" cx="12" cy="12" r="12"/><path d="M12 4.3l6.3 2.8v4.2c0 3.88-2.69 7.52-6.3 8.4-3.61-.88-6.3-4.51-6.3-8.4V7.1L12 4.3zm-.56 12.88l3.3-5.79.04-.08c.05-.1.01-.29-.26-.29h-1.96l.56-3.92h-.56L9.3 12.82c0 .03.07-.12-.03.07-.11.2-.12.37.2.37h1.97l-.56 3.92h.56z" fill="%23FFF"/></g></svg>');
   --pwa-installable-color-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><g fill-rule="nonzero" fill="none"><circle fill="%230CCE6B" cx="12" cy="12" r="12"/><path d="M12 5a7 7 0 1 0 0 14 7 7 0 0 0 0-14zm3.5 7.7h-2.8v2.8h-1.4v-2.8H8.5v-1.4h2.8V8.5h1.4v2.8h2.8v1.4z" fill="%23FFF"/></g></svg>');
   --pwa-optimized-color-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><rect fill="%230CCE6B" width="24" height="24" rx="12"/><path d="M5 5h14v14H5z"/><path fill="%23FFF" d="M12 15.07l3.6 2.18-.95-4.1 3.18-2.76-4.2-.36L12 6.17l-1.64 3.86-4.2.36 3.2 2.76-.96 4.1z"/></g></svg>');
+
+  --error-icon-small-url: url('data:image/svg+xml,%3Csvg width="18" height="28" viewBox="0 0 18 28" fill="none" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M7.5 22H10.5V19H7.5V22Z" fill="%23FF4E42"/%3E%3Cpath d="M7.5 16H10.5V7H7.5V16Z" fill="%23FF4E42"/%3E%3C/svg%3E');
+  --error-icon-medium-url: url('data:image/svg+xml,%3Csvg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M17 26H20V23H17V26Z" fill="%23FF4E42"/%3E%3Cpath d="M17 20H20V11H17V20Z" fill="%23FF4E42"/%3E%3C/svg%3E');
+  --error-icon-big-url: url('data:image/svg+xml,%3Csvg width="120" height="120" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M56 80H64V72.0001H56V80Z" fill="%23FF4E42"/%3E%3Cpath d="M56 64H64V41H56V64Z" fill="%23FF4E42"/%3E%3C/svg%3E');
 }
 
 @media not print {
@@ -233,7 +237,6 @@
     --score-icon-size: 10px;
     --topbar-height: 28px;
     --topbar-logo-size: 20px;
-    --error-icon-size: 28px;
     --error-icon-min-width: 10px;
   }
 
@@ -273,7 +276,6 @@
   --score-icon-margin-left: 2px;
   --score-icon-size: 10px;
   --section-padding-vertical: 8px;
-  --error-icon-size: 28px;
   --error-icon-min-width: 10px;
 }
 
@@ -476,7 +478,7 @@
 .lh-audit--error .lh-audit__score-icon {
   height: var(--error-icon-size);
   min-width: var(--error-icon-min-width);
-  background-image: url("data:image/svg+xml,%3Csvg width='18' height='28' viewBox='0 0 18 28' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.5 22H10.5V19H7.5V22Z' fill='%23FF4E42'/%3E%3Cpath d='M7.5 16H10.5V7H7.5V16Z' fill='%23FF4E42'/%3E%3C/svg%3E");
+  background-image: var(--error-icon-small-url);
 }
 
 .lh-audit--manual .lh-audit__display-text,
@@ -739,7 +741,7 @@
 .lh-metric--error .lh-metric__innerwrap::before {
   height: var(--error-icon-size);
   min-width: var(--error-icon-min-width);
-  background-image: url("data:image/svg+xml,%3Csvg width='18' height='28' viewBox='0 0 18 28' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.5 22H10.5V19H7.5V22Z' fill='%23FF4E42'/%3E%3Cpath d='M7.5 16H10.5V7H7.5V16Z' fill='%23FF4E42'/%3E%3C/svg%3E");
+  background-image: var(--error-icon-small-url);
 }
 
 .lh-metric--error .lh-metric__value,
@@ -1124,13 +1126,16 @@
 }
 
 .lh-sticky-header--visible > .lh-gauge__wrapper--fail > .lh-gauge__svg-wrapper {
-  background-image: url("data:image/svg+xml,%3Csvg width='36' height='36' viewBox='0 0 36 36' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 26H20V23H17V26Z' fill='%23FF4E42'/%3E%3Cpath d='M17 20H20V11H17V20Z' fill='%23FF4E42'/%3E%3C/svg%3E");
-  height: 36px;
-  width:36px;
+   background-image: var(--error-icon-medium-url);
+  /* height: 36px;
+  width:36px; */
+  /* background-position: center; */
+  /* background-size: calc(var(--gauge-circle-size-big) * 0.6); */
+  /* background-repeat: no-repeat; */
 }
 
 .lh-category-header .lh-gauge__wrapper--fail  .lh-gauge__svg-wrapper{
-  background-image: url("data:image/svg+xml,%3Csvg width='120' height='120' viewBox='0 0 120 120' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M56 80H64V72.0001H56V80Z' fill='%23FF4E42'/%3E%3Cpath d='M56 64H64V41H56V64Z' fill='%23FF4E42'/%3E%3C/svg%3E%0A");
+  background-image: var(--error-icon-big-url)
 }
 
 /* The plugin badge overlay */
