--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -543,16 +543,13 @@
 
 /* We want to hide the browser's default arrow marker on summary elements. */
 
-/* ::marker is a new pseudoselector. */
-/* https://chromestatus.com/feature/6730096436051968 */
-@supports selector(::marker) {
-  .lh-audit-group > summary,
-  .lh-expandable-details > summary {
-    display: block;
-  }
+/* Newer browsers hide the default arrow marker if display is set to block. https://chromestatus.com/feature/6730096436051968 */
+.lh-audit-group > summary,
+.lh-expandable-details > summary {
+  display: block;
 }
 
-/* Older webkit browsers might have -webkit-details-marker,
+/* Older browsers might have -webkit-details-marker,
    and require setting list style type to none. */
 .lh-audit-group > summary,
 .lh-expandable-details > summary {
@@ -562,6 +559,8 @@
 .lh-expandable-details > summary::-webkit-details-marker {
   display: none;
 }
+
+/* details-element-polyfill adds an arrow. Hide it. https://github.com/javan/details-element-polyfill/blob/main/src/styles.js */
 .lh-audit-group > summary:before,
 .lh-expandable-details > summary:before {
   display: none;
