--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -541,26 +541,18 @@
   background-color: var(--color-hover);
 }
 
-/* We want to hide the browser's default arrow marker on summary elements. */
-
-/* Newer browsers hide the default arrow marker if display is set to block. https://chromestatus.com/feature/6730096436051968 */
+/* We want to hide the browser's default arrow marker on summary elements. Admittedly, it's complicated. */
 .lh-audit-group > summary,
 .lh-expandable-details > summary {
+  /* Blink 89+ and Firefox will hide the arrow when display is changed from (new) default of `list-item` to block.  https://chromestatus.com/feature/6730096436051968*/
   display: block;
 }
-
-/* Older browsers might have -webkit-details-marker,
-   and require setting list style type to none. */
-.lh-audit-group > summary,
-.lh-expandable-details > summary {
-  list-style-type: none;
-}
+/* Safari and Blink <=88 require using the -webkit-details-marker selector */
 .lh-audit-group > summary::-webkit-details-marker,
 .lh-expandable-details > summary::-webkit-details-marker {
   display: none;
 }
-
-/* details-element-polyfill adds an arrow. Hide it. https://github.com/javan/details-element-polyfill/blob/main/src/styles.js */
+/* When the details-element-polyfill is used, it adds an ugly arrow. Hide it. https://github.com/javan/details-element-polyfill/blob/main/src/styles.js */
 .lh-audit-group > summary:before,
 .lh-expandable-details > summary:before {
   display: none;
