--- a/lighthouse-treemap/app/styles/treemap.css
+++ b/lighthouse-treemap/app/styles/treemap.css
@@ -56,6 +56,7 @@ body {
 /* TODO: BEM is backwards here and many other places */
 .lh-header--section {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
@@ -74,9 +75,15 @@ body {
   justify-content: flex-end;
 }
 
+.lh-logotitle {
+  display: flex;
+  align-items: center;
+}
+
 .bundle-selector {
-  width: 50%;
+  flex: 1;
   padding: 2px;
+  margin: 2px;
 }
 
 .bundle-selector {
