--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -599,6 +599,7 @@
 .lh-metricfilter__label:first-of-type {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  margin-left: 5px;
 }
 .lh-metricfilter__label:last-of-type {
   border-top-right-radius: 5px;
