--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -4,12 +4,21 @@
  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  */
 
+.flow-vars {
+  --app-font-size: 12px;
+  --sidebar-title-font-size: 16px;
+  --sidebar-summary-font-size: 14px;
+  --sidebar-flow-step-navigation-font-size: 14px;
+  --base-spacing: 16px;
+}
+
 .App {
   display: grid;
   grid-template-areas: "side report";
   grid-template-columns: min-content auto;
-  min-height: 100vh;
+  height: 100vh;
   max-width: 100vw;
+  font-size: var(--app-font-size);
 }
 .App a {
   color: var(--color-gray-800);
@@ -35,21 +44,19 @@
 
 .SidebarSectionTitle {
   height: 16px;
-  font-size: 11px;
   margin: 32px 16px 0px 16px;
   color: var(--color-gray-700);
 }
 
 .SidebarHeader {
-  margin: 16px;
+  margin: var(--base-spacing);
 }
 .SidebarHeader__title {
-  font-size: 16px;
+  font-size: var(--sidebar-title-font-size);
   font-weight: bold;
   width: max-content;
 }
 .SidebarHeader__date {
-  font-size: 12px;
   color: var(--color-gray-700);
   width: max-content;
 }
@@ -58,14 +65,13 @@
   padding: 4px 16px;
   list-style: none;
   color: var(--color-gray-700);
-  font-size: 12px;
 }
 
 .SidebarSummary {
   width: 100%;
   display: flex;
   padding: 8px 16px;
-  column-gap: 16px;
+  column-gap: var(--base-spacing);
   align-items: center;
 }
 
@@ -83,14 +89,14 @@
 }
 
 .SidebarSummary__label {
-  font-size: 14px;
+  font-size: var(--sidebar-summary-font-size);
 }
 
 .SidebarFlowStep {
   display: flex;
-  column-gap: 16px;
-  padding-left: 16px;
-  padding-right: 16px;
+  column-gap: var(--base-spacing);
+  padding-left: var(--base-spacing);
+  padding-right: var(--base-spacing);
 }
 
 .SidebarFlowStep__label {
@@ -98,10 +104,9 @@
   margin-top: 14px;
   margin-bottom: 14px;
   justify-self: left;
-  font-size: 12px;
 }
 .SidebarFlowStep__label--navigation {
-  font-size: 14px;
+  font-size: var(--sidebar-flow-step-navigation-font-size);
 }
 
 .SidebarFlowStep__icon {
