--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -9,6 +9,7 @@
   --sidebar-title-font-size: 16px;
   --sidebar-summary-font-size: 14px;
   --sidebar-flow-step-navigation-font-size: 14px;
+  --summary-flow-step-label-font-size: 16px;
   --base-spacing: 16px;
 }
 
@@ -168,4 +169,10 @@
 
 .SummaryFlowStep {
   display: contents;
+}
+
+.SummaryFlowStep__label {
+  font-size: var(--summary-flow-step-label-font-size);
+  align-self: center;
+  text-decoration: underline !important;
 }
