--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -171,9 +171,13 @@
 .SummaryFlowStep {
   display: contents;
 }
+.SummaryFlowStep > * {
+  margin: 8px;
+}
 
 .SummaryFlowStep__screenshot {
   width: 60px;
+  margin: 8px;
   align-self: center;
   justify-self: center;
   margin: var(--base-spacing) 0;
@@ -191,7 +195,7 @@
   display: contents;
 }
 .SummaryNavigationHeader > * {
-  padding: 8px 0;
+  padding: 8px;
   background-color: var(--color-gray-200);
 }
 
