--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -166,6 +166,7 @@
   display: grid;
   grid-auto-rows: min-content;
   grid-template-columns: min-content min-content 4fr 1fr 1fr 1fr 1fr;
+  align-items: center;
 }
 
 .SummaryFlowStep {
@@ -185,7 +186,6 @@
 
 .SummaryFlowStep__label {
   font-size: var(--summary-flow-step-label-font-size);
-  align-self: center;
   text-decoration: underline !important;
   grid-column: 3;
 }
@@ -208,6 +208,8 @@
 }
 
 .SummaryFlowIcon {
+  height: 100%;
+  grid-column: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -218,4 +220,14 @@
   width: 2px;
   flex-grow: 1;
   background-color: var(--color-blue-A700);
+}
+
+.SummaryFlowDivider {
+  display: contents;
+}
+
+.SummaryFlowDivider__line {
+  grid-column-end: span 5;
+  height: 1px;
+  background-color: var(--color-gray-300);
 }
