--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -23,10 +23,6 @@
   max-width: 100vw;
   font-size: var(--app-font-size);
 }
-.App a {
-  color: var(--color-gray-800);
-  text-decoration: none;
-}
 
 .Separator {
   height: 1px;
@@ -38,6 +34,10 @@
 
 .Sidebar {
   border-right: 1px solid var(--color-gray-300);
+}
+.Sidebar a {
+  color: var(--color-gray-800);
+  text-decoration: none;
 }
 
 .Sidebar--current {
@@ -221,7 +221,8 @@
 
 .SummaryFlowStep__label {
   font-size: var(--summary-flow-step-label-font-size);
-  text-decoration: underline !important;
+  color: var(--color-gray-800);
+  text-decoration: underline;
   grid-column: 3;
 }
 
