--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -71,7 +71,7 @@
   display: block;
 }
 
-.CategorySummary {
+.CategoryRatio {
   justify-self: center;
   display: flex;
   align-items: center;
@@ -81,37 +81,37 @@
   min-width: var(--gauge-circle-size);
   text-decoration: none;
 }
-.CategorySummary::before {
+.CategoryRatio::before {
   content: '';
   height: var(--score-icon-size);
   width: var(--score-icon-size);
   margin: var(--score-icon-margin);
 }
-.CategorySummary--pass {
+.CategoryRatio--pass {
   color: var(--color-pass)
 }
-.CategorySummary--pass::before {
+.CategoryRatio--pass::before {
   background-color: var(--color-pass);
   border-radius: 50%;
 }
-.CategorySummary--average {
+.CategoryRatio--average {
   color: var(--color-average)
 }
-.CategorySummary--average::before {
+.CategoryRatio--average::before {
   background-color: var(--color-average);
 }
-.CategorySummary--fail {
+.CategoryRatio--fail {
   color: var(--color-fail)
 }
-.CategorySummary--fail::before {
+.CategoryRatio--fail::before {
   border-left: calc(var(--score-icon-size) / 2) solid transparent;
   border-right: calc(var(--score-icon-size) / 2) solid transparent;
   border-bottom: var(--score-icon-size) solid var(--color-fail);
 }
-.CategorySummary--null {
+.CategoryRatio--null {
   color: var(--color-gray-700);
 }
-.CategorySummary--null::before {
+.CategoryRatio--null::before {
   border-radius: 50%;
   border: 2px solid var(--color-gray-700);
 }
