--- a/flow-report/assets/styles.css
+++ b/flow-report/assets/styles.css
@@ -26,6 +26,10 @@
   font-size: var(--app-font-size);
 }
 
+.Content {
+  overflow: scroll;
+}
+
 .FlowStepIcon {
   height: 100%;
   display: flex;
